--- a/templates/app/accounts/register-user.html
+++ b/templates/app/accounts/register-user.html
@@ -18,7 +18,7 @@
                         <hr>
                         <div id="restaurant-sets-holder">
                             <form 
-                                action="" 
+                                action="{% url 'accounts:register_user' %}" 
                                 class="form-fields-set foodbakery-dev-restaurant-form" 
                                 method="post" action="register-select-package.html">
 
