--- a/templates/app/accounts/register-user.html
+++ b/templates/app/accounts/register-user.html
@@ -86,6 +86,9 @@
                                                     {% endfor %}
                                                 {% endif %}
                                             {% endfor %}
+
+                                            <li style="color: red;">{{form.non_field_errors}}</li>
+                                            
                                         </ul>
                                         <div class="row">
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
