--- a/templates/app/accounts/register-user.html
+++ b/templates/app/accounts/register-user.html
@@ -88,7 +88,7 @@
                                             {% endfor %}
 
                                             <li style="color: red;">{{form.non_field_errors}}</li>
-                                            
+
                                         </ul>
                                         <div class="row">
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -100,17 +100,11 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                {% if messages %}
-                                                    {% for message in messages %}
-                                                        <div class="alert alert-success" role="alert">
-                                                            {{ message }}
-                                                        </div>
-                                                    {% endfor %}
-                                                {% endif %}
-                                            </div>
+
+                                            <!-- Load alers here -->
+                                            {% include '../../partials/alerts.html' %}
+
                                         </div>
-                                            
                                     </li>
                                 </ul>
                             </form>
