--- a/templates/partials/alerts.html
+++ b/templates/partials/alerts.html
@@ -1,11 +1,16 @@
 <!-- templates/partials/alerts.html -->
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-success" role="alert">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
+		{% if messages %}
+		    {% for message in messages %}
+		        <div class="alert alert-success" role="alert">
+		            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+		                <span aria-hidden="true">&times;</span>
+		            </button>
+		            {{ message }}
+		        </div>
+		    {% endfor %}
+		{% endif %}
     </div>
+
+
