--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
 	<script src="{% static 'assets/js/modernizr.js' %}"></script>
 	<script src="{% static 'assets/js/bootstrap.js' %}"></script>
 
+	 <!-- Custome CSS -->
+  	<link href="{% static 'assets/css/custom.css' %}" rel="stylesheet">
+
 	<style>
 		body, .main-section p, .mce-content-body p{
 			font:Normal  14px/24px "Open Sans", sans-serif;letter-spacing: 0px;text-transform: none;color: #515151 !important;
