--- a/templates/partials/alerts.html
+++ b/templates/partials/alerts.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		{% if messages %}
 		    {% for message in messages %}
-		        <div class="alert alert-success" role="alert">
+		        <div class="alert alert-success show-notification" role="alert">
 		            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		                <span aria-hidden="true">&times;</span>
 		            </button>
@@ -12,5 +12,3 @@
 		    {% endfor %}
 		{% endif %}
     </div>
-
-
