--- a/templates/partials/alerts.html
+++ b/templates/partials/alerts.html
@@ -3,12 +3,15 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 		{% if messages %}
 		    {% for message in messages %}
-		        <div class="alert alert-success show-notification" role="alert">
+		        <!-- <div class="alert alert-success show-notification" role="alert"> -->
+		        <div class="alert alert-{{message.tags}} show-notification" role="alert">
 		            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 		                <span aria-hidden="true">&times;</span>
 		            </button>
-		            {{ message }}
+		           <strong>{{message}}</strong>
 		        </div>
 		    {% endfor %}
 		{% endif %}
     </div>
+
+
