--- a/templates/app/accounts/register-vendor.html
+++ b/templates/app/accounts/register-vendor.html
@@ -1,3 +1,101 @@
 <!-- templates/app/accounts/register-vendor.html -->
 
-<h1>Register Vendor</h1>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
+    <!-- Main Section Start -->
+	<div class="main-section">
+	    <div class="page-section nopadding cs-nomargin" style="margin-top: 0px;padding-top: 60px;padding-bottom: 60px;margin-bottom: 0px;">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+	                    <div class="user-dashboard loader-holder">
+	                        <div class="user-holder">
+	                    <h4 class="text-center" style="margin-bottom: 0;">PARTNER WITH FOODONLINE</h4>
+	                    <p class="text-center">Register your restaurant with foodonline marketplace and get more customer</p>
+	                    <hr>
+	                    <div id="restaurant-sets-holder">
+	                        <form action="" class="form-fields-set foodbakery-dev-restaurant-form" method="post">
+	                            <ul class="register-add-restaurant-tab-container restaurant-information-tab-container">
+	                                <li>
+	                                    <div class="row">
+	                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	                                            <div class="row">
+	                                                <ul >
+	                                                    <li>
+	                                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+	                                                            <div class="field-holder">
+	                                                                <label>First name</label>
+	                                                            </div>
+	                                                        </div>
+	                                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+	                                                            <div class="field-holder">
+	                                                                <label>Last name</label>
+	                                                            </div>
+	                                                        </div>
+	                                                        
+	                                                        
+	                                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+	                                                            <div class="field-holder">
+	                                                                <label>Email Address</label>
+	                                                            </div>
+	                                                        </div>
+	                                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+	                                                            <div class="field-holder">
+	                                                                <label>Username</label>
+	                                                            </div>
+	                                                        </div>
+	                                                    </li>
+	                                                    
+	                                                    <li>
+	                                                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+	                                                            <div class="field-holder">
+	                                                                <label>Password</label>
+	                                                                
+	                                                            </div>
+	                                                        </div>
+	                                                        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+	                                                            <div class="field-holder">
+	                                                                <label>Confirm Password</label>
+	                                                                
+	                                                            </div>
+	                                                        </div>
+	                                                    </li>
+	                                                </ul>
+
+	                                                
+	                                            </div>
+	                                        </div>
+	                                    </div>
+	                                </li>
+	                                <li>>
+	                                    <div class="row">
+	                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	                                            <div class="field-holder">
+	                                                <div class="payment-holder">
+	                                                    <input type="submit" value="Submit" id="btn-next-restaurant-information" class="bgcolor">
+	                                                </div>
+	                                            </div>
+	                                        </div>
+	                                    </div>
+	                                    <div class="row">
+	                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+	                                        	Alert here
+	                                        </div>    
+	                                    </div>
+	                                </li>
+	                            </ul>
+	                        </form>
+	                    </div>
+	                </div>
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
+	</div>
+    <!-- Main Section End -->
+
+{% endblock %}
