--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -68,10 +68,12 @@
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<div class="login-option">
-								<a class="cs-color cs-popup-joinus-btn login-popup" data-target="#sign-in" data-toggle="modal" href="#user-register">Login / Register</a><a class="get-start-btn" href="register-restaurant.html">
-									Register
-									Restaurant </a>
-							</div>
+				                <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'accounts:login' %}">Login</a> /  
+				                    <span><a href="{% url 'accounts:register_user' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
+				                    <span><a href="{% url 'accounts:logout' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Logout</a></span>
+				                    <a class="get-start-btn" href="{% url 'accounts:register_vendor' %}">Register Restaurant 
+				                </a>
+				             </div>
 						</div>
 					</div>
 				</div>
