--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -69,7 +69,7 @@
 						<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<div class="login-option">
 				                {% if user.is_authenticated %}
-				                  <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'accounts:dashboard' %}">My Account</a>
+				                  <a class="cs-color cs-popup-joinus-btn login-popup" href="">My Account</a>
 				                  <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'accounts:logout' %}">Logout</a>
 				                  {% else %}
 				                    <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'accounts:login' %}">Login</a> / 
