--- a/templates/app/accounts/login.html
+++ b/templates/app/accounts/login.html
@@ -50,7 +50,8 @@
 
                                     <div class="row">
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <!-- Load message -->
+                                            <!-- Load message from templates/includes/alert.html -->
+                                            {% include '../../partials/alerts.html' %}
 
                                         </div>
                                     </div>
